--- a/이론/DFS,BFS.html
+++ b/이론/DFS,BFS.html
@@ -106,5 +106,74 @@ dfs(graph, 1, visited) => 1 2 4 6 3 5 7
 </pre>
 
     </ul>
+
+    <h2>BFS(Breadth First Search/ 너비 우선 탐색)</h2>
+    <ul>
+        <h4><li>BFS란</h4>
+            <ul>
+                <li>루트 노드(혹은 다른 임의의 노드)에서 시작해서 인접한 노드를 먼저 탐색하는 방법이다. </li>
+                <li>시작 정점에 가까이 있는 정점부터 먼저 방문하고 멀리 떨어져 있는 정점을 나중에 방문 하는 순회 방법이다.</li>
+                <li>즉, DFS와는 다르게 넓게 탐색하는 방법이다.</li>
+            </ul>
+        </li>
+        <h4><li>BFS의 특징</h4>
+            <ul>
+                <li>DFS와는 다르게 재귀적을 동작하지 않는다.</li>
+                <li><b>어떤 노드를 방문했었는지에 대한 여부를 반드시 검사해야 한다.</b><br> 이를 검사하지 않을 시 무한루프에 빠질 수 있다.</li>
+                <li>선입선출(FIFO)를 원칙으로 탐색하며 deque를 사용하여 구현할 수 있다.</li>
+            </ul>
+        </li>
+        <h4><li>BFS의 탐색 과정</h4>
+            <ol>
+                <li>탐색 시작 노드를 큐에 삽입하고 방문처리 한다.</li>
+                <li>큐에서 노드를 꺼내 방문하지 않은 인접 노드 정보를 모두 큐에 삽입하고 방문 처리한다.</li>
+                <li>2번의 과정을 더 이상 수행할 수 없을때까지 반복한다.</li>
+                <img style="width: 300px; height: 200px;" src="https://user-images.githubusercontent.com/110621233/229363869-957d97fc-986d-4f13-a582-5ae633a18a23.png" alt="">
+            </ol>
+        </li>
+        <h4><li>BFS 소스코드 예제(Python)</h4>
+<pre>
+    from collections import deque
+    # BFS 함수 정의
+    def bfs(graph, start, visited):
+        # 큐(Queue) 구현을 위해 deque 라이브러리 사용
+        queue = deque([start])
+        # 현재 노드를 방문 처리
+        visited[start] = True
+        # 큐가 빌 때까지 반복
+        while queue:
+            # 큐에서 하나의 원소를 뽑아 출력
+            v = queue.popleft()
+            print(v, end=' ')
+            # 해당 원소와 연결된, 아직 방문하지 않은 원소들을 큐에 삽입
+            for i in graph[v]:
+                if not visited[i]:
+                    queue.append(i)
+                    visited[i] = True
+    # 각 노드가 연결된 정보를 리스트 자료형으로 표현(2차원 리스트)
+    graph = [
+      [],
+      [2, 3, 8],
+      [1, 7],
+      [1, 4, 5],
+      [3, 5],
+      [3, 4],
+      [7],
+      [2, 6, 8],
+      [1, 7]
+    ]
+    # 각 노드가 방문된 정보를 리스트 자료형으로 표현(1차원 리스트)
+    visited = [False] * 9
+    # 정의된 BFS 함수 호출
+    bfs(graph, 1, visited)
+</pre>
+        </ll>
+        <h4><li>백준 BFS 문제</h4>
+        <ul>
+            <li><a href="https://www.acmicpc.net/problem/2178">미로 탐색(실버1)</a></li>
+            <li><a href="https://www.acmicpc.net/problem/2667">단지 번호 붙이기(실버1)</a></li>
+        </ul>
+    </li>
+    </ul>
 </body>
 </html>
